--- a/app/globals.css
+++ b/app/globals.css
@@ -32,3 +32,34 @@ body {
     text-wrap: balance;
   }
 }
+
+
+.mov-1 {
+  position: relative;
+  width: 90%;
+  max-width: 900px;
+  border-radius: 15px;
+  z-index: 1;
+}
+.mov-1-color {
+  background: rgba(28, 34, 117, 0.5);
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+}
+.video-wrapper {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.overlay {
+    position: absolute;
+    width: 90%;
+    max-width: 900px;
+    height: 100%;
+    background: rgba(1, 4, 46, 0.24);
+    z-index: 2;
+    border-radius: 15px;
+}
