--- a/app/globals.css
+++ b/app/globals.css
@@ -63,3 +63,33 @@ body {
     z-index: 2;
     border-radius: 15px;
 }
+
+.img-2 {
+  background: url('../public/10.png');
+  background-size: 100% 100% !important;
+  width: 90vw;
+  height: 90vw;
+  max-width: 600px;
+  max-height: 600px;
+  border-radius: 15px;
+}
+.img-2-color {
+  background: rgba(28, 34, 117, 0.5);
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+}
+.img-4 {
+  background: url('../public/12.png');
+  background-size: 100% 100% !important;
+  width: 85vw;
+  max-width: 900px;
+  aspect-ratio: 16 / 9;
+  border-radius: 15px;
+}
+.img-4-color {
+  background: rgba(40, 44, 102, 0.5);
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+}
